test/tests/compiler/18_structures/invalid_parse/plx1_trailing_comma_initializer.plx
type struc s1(a: i32, b: i32, c: i32)

pub fn main(none) i32 {
    s: struc s1 = $(1, 2, 3, )
    return 0
}
